@@ -5,3 +5,8 @@
 * Grab country names translations at build time by using the iso_3166
   translations from the iso-codes package. See countrychooser mechanism
   for this. Will save useless work to translators.
+* Dynamically build list of suites on a mirror and let the user choose
+  between them, instead of choosing from a static list that might be wrong.
+  (The question is, where to get translated descriptions of the available
+  suites? Or would a list of suite names w/o descrptions be ok as the
+  question only shows up in expert mode?)
